# resaxs

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
calc_saxs/: CMakeLists.txt  calc_saxs.cpp  calc_saxs.hpp  main.cpp  sasa_atomic.cpp  sasa_atomic.hpp
cmake/Modules/: FindOpenCL.cmake
pdblib/: CMakeLists.txt
pdblib/include/dsrpdb/: PDB.h  Point.h  Protein.h
pdblib/src/: PDB.cc  Protein.cc  Protein_pdb.cc
resaxslib/: CMakeLists.txt
resaxslib/archived/: Context.cpp  Context.hpp  gpu_saxs.cl  gpu_saxs_2d.cl  gpu_saxs_2d.cpp  gpu_saxs_2d.hpp  gpu_saxs_2d_block.cl  gpu_saxs_2d_block_local.cpp  gpu_saxs_2d_block_local.hpp  gpu_saxs_pt_wf.cpp  gpu_saxs_pt_wf.hpp  saxs_algorithm_base.cpp  saxs_algorithm_base.hpp  saxs_common.cl
resaxslib/include/: bb_grid.hpp  constants.hpp  ff_coef.hpp  host_debye.hpp  parse_pdb.hpp  re_algorithm.hpp  re_cl_algorithm_base.hpp  re_cl_buffer.hpp  resaxs.hpp  resaxs_cl_core.hpp  rsasa_algorithm.hpp  saxs_algorithm.hpp  saxs_profile.hpp  utils.hpp
resaxslib/src/: alg_saxs_hist_cl_gpu.cpp  alg_saxs_hist_cl_gpu.hpp  gpu_saxs_pt_wf.cl  gpu_saxs_v2.cl  host_debye.cpp  parse_pdb.cpp  re_cl_algorithm_base.cpp  resaxs.cpp  rsasa_algorithm.cpp  rsasa_cl_gpu_alg.cpp  rsasa_cl_gpu_alg.hpp  rsasa_cpu_alg.cpp  rsasa_cpu_alg.hpp  rsasa_dot_spheres.cl  saxs_alg_cl_gpu_pt_wf.cpp  saxs_alg_cl_gpu_pt_wf.hpp  saxs_alg_cl_gpu_v2.cpp  saxs_alg_cl_gpu_v2.hpp  saxs_algorithm.cpp  saxs_hist_gpu.cl  utils.cpp
test_common/: CMakeLists.txt  alg_test_data.cpp  main.cpp
test_common/include/: random_helpers.hpp  run_saxs_alg.hpp  saxs_params_io.hpp
test_recalc/: CMakeLists.txt  RecalcTest.cpp  RecalcTest.h  main.cpp
test_resaxs/: CMakeLists.txt  FPCompare.hpp  SAXSTest.cpp  SAXSTest.hpp  main.cpp  test1888.Iq_vec.txt  test1888.ff_db.txt  test1888.pos_matrix.txt  test1888.q_vec.txt  test_accsaxs.vcxproj
